...
        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Firebase User ID: 123456789abc" />

        <EditText
            android:id="@+id/editTextFirstName"
            style="@style/ThemeOverlay.MyTextDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name1" />


...
            android:layout_centerInParent="true"
            android:text="@string/sign_out"
            android:theme="@style/ThemeOverlay.MyDarkButton"
            android:visibility="gone" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_centerInParent="true"
            android:text="@string/save_and_continue"
            android:layout_below="@+id/button_twitter_signout"
...
